--- a/mr-attributes.yaml
+++ b/mr-attributes.yaml
@@ -1,5 +1,6 @@
 kind: AttributeQuery
-apiVersion: client.uor-framework.io/v1alpha1
+apiVersion: client.emporous.io/v1alpha1
 attributes:
-  model: true
+  ai-model:
+    model: true
   
